--- a/resources/sass/partials/_my-profile.scss
+++ b/resources/sass/partials/_my-profile.scss
@@ -66,7 +66,7 @@ main#profile {
                 ul {
                     height: 100%;
                     position: relative;
-                    li.image-relative{
+                    li.background-image{
                         position: relative;
                         height: 73%;
                         img {
